--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -16,8 +16,9 @@
 header {
 	display: flex;
 	align-items: center;
-	justify-content: space-around;
+	justify-content: space-between;
 	margin-top: 33px;
+	width: 100vw;
 }
 
 header img {
@@ -71,7 +72,7 @@ nav {
 
 @media only screen and (max-width: 1024px) {
 	header {
-		width: 160vw;
+		width: 100vw;
 		display: flex;
 		justify-content: space-between;
 	}
@@ -106,6 +107,7 @@ nav {
 
 	header .responsive_nav {
 		transform: translateY(200vh);
+		width: 100vw;
 	}
 
 	nav .nav-close-btn {
