--- a/src/Components/about.css
+++ b/src/Components/about.css
@@ -4,11 +4,14 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100vw;
 }
 
 .about-section>h1 {
     font-size: 3rem;
     margin: 0px auto;
+    padding-bottom: .75rem;
+    border-bottom: 1px solid black;
 }
 
 .mission-section {
@@ -50,12 +53,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 1.5rem;
     width: 70vw;
     margin-top: 12rem;
 }
 
 .story-info {
-    height: 24vw;
+    /* height: 100%; */
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -103,6 +107,9 @@
 @media only screen and (max-width: 1024px) {
     .about-section{
         justify-content: flex-start;
+        margin: 0 1rem;
+        max-width: 100vw;
+        width: 100%;
     }
     .mission-section {
         margin-left: 8rem;
@@ -110,11 +117,14 @@
         flex-direction: column;
         justify-content: center;
         align-items: flex-start;
+        max-width: 100vw;
         width: 100%;
+        margin: 1rem 2rem;
+        padding: 0 3rem;
     }
 
     .mission-section>p {
-        width: 120%;
+        width: 100%;
     }
 
     .stroy-section {
@@ -122,6 +132,8 @@
         margin-left: 8rem;
         margin-top: 4rem;
         width: 100%;
+        margin: 1rem 2rem;
+        padding: 0 2rem;
     }
 
     .story-info {
@@ -133,7 +145,7 @@
         align-items: flex-start;
     }
     .story-info>p {
-        width: 120%;
+        width: 100%;
         display: flex;
         align-items: flex-end;
         justify-content: flex-start;
