chore: adding responsiveness to home and about pages

--- a/src/Components/Portfolio.css
+++ b/src/Components/Portfolio.css
@@ -50,7 +50,8 @@
 
 @media only screen and (max-width: 1024px) {
     .carousel{
-      width: 160vw;
+      max-width: 100vw;
+      width: 90%;
     }
     .slider {
         width: 60%;
