--- a/src/Components/footer.css
+++ b/src/Components/footer.css
@@ -5,6 +5,8 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    max-width: 100vw;
+    width: 100%;
 }
 .footer-section>div{
     color: white;
@@ -13,16 +15,19 @@
     align-items: center;
     width: 30vw;
 }
-.socials>img{
-    height: 33px;
-    width: 33px;
+
+
+.socials{
     filter: invert(100%);
     margin: 0px 3px;
-    cursor: pointer;
-
 }
-#facebook{
-    scale: 1.4;
+
+.footer-section .socials{
+    display: flex;
+    /* justify-content: space-between; */
+    align-items: center;
+    cursor: pointer;
+    gap: 1rem;
 }
 
 .logo>img{
@@ -38,19 +43,28 @@
 }
 @media only screen and (max-width: 1024px){
     .footer-section{
-        width: 100vw;
+        max-width: 110vw;
+        width: 100%;
         flex-direction: column;
     }
     .footer-section>div{
         width: 100%;
         margin: 13px 0;
     }
-    .socials>img{
-        height: 50px;
-        width: 50px;
-        margin: 0 13px;
+   
+
+    .footer-section>.contact-email{
+        max-width: 80vw;
+        width: 100%;
     }
-    .contact-email{
-        font-size: 33px;
+
+    .footer-section>.contact-email>p,
+    .footer-section>.copyright>p{
+        text-align: center;
+        font-size: 1.5rem;
+    }
+
+    .footer-section>.copyright{
+        max-width: 80vw;
     }
 }
