--- a/src/Components/Features.css
+++ b/src/Components/Features.css
@@ -7,6 +7,9 @@
     justify-content: center;
     align-items: center;
     margin-top: 5rem;
+    gap: 2rem;
+    margin: 5rem 0;
+    padding: 0 5rem;
 }
 .features>h1{
     border-bottom: 2px solid black;
@@ -14,17 +17,17 @@
     font-family: 'Montserrat', sans-serif;
 }
 .features-content{
-    width: 70%;
+    /* width: 70%; */
     display: flex;
     justify-content: space-around;
-    align-items: center;
-    margin-top: 1rem;
+    /* align-items: center; */
+    /* margin-top: 1rem; */
 }
 .features-section{
-    margin: 2rem;
+    margin-top: 2rem;
 }
 .features-section>ul{
-    width: 20vw;
+    /* width: 20vw; */
     list-style: circle;
 }
 .features-section>ul>li{
@@ -33,11 +36,11 @@
     margin: 7px;
 }
 .benefits-section{
-    margin-top: 3rem ;
+    margin-top: 2rem ;
 }
 
 .benefits-section>ul{
-    width: 20vw;
+    /* width: 20vw; */
     list-style: circle;
 }
 .benefits-section>ul>li{
@@ -57,7 +60,8 @@
 
 @media only screen and (max-width: 1024px){
     .features{
-        width: 160%;
+        max-width: 100vw;
+        width: 100%;
     }
     .features-content{
         display: flex;
@@ -65,7 +69,7 @@
         width: 100%;
     }
     .features-section>ul{
-        width: 150vw;
+        width: 100vw;
         list-style: disc;
         padding: 13px;
     }
@@ -77,7 +81,7 @@
         font-size: 30px;
     }
     .benefits-section>ul{
-        width: 150vw;
+        width: 100vw;
         list-style: disc;
         padding: 13px;
     }
@@ -89,7 +93,8 @@
     }
     .features-img>img{
         height: 100%;
-        width: 140vw;
+        margin: 0 auto;
+        width: 80vw;
        
     }   
 }
