--- a/src/Components/Hero.css
+++ b/src/Components/Hero.css
@@ -1,25 +1,40 @@
-
-  @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
 
 .hero{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 70%;
+    width: 100%;
     margin: auto;
-    margin-top: 5rem;
+    padding-top: 5rem;
+    padding-bottom: 2rem;
+    max-width: 100vw;
+    background-color: whitesmoke;
 }
 .info{
-    width: 33rem;
+    /* width: 33rem; */
+    padding: 0 2rem;
     margin: 13px;
 }
+
+.hero-img{
+    width: 100%;
+}
+
+.hero-img img{
+    padding: 0 2rem;
+    width: 30rem;
+    border-radius: 0.75rem;
+}
+
 .headline{
     font-size: 4rem;
     font-family: 'Playfair Display', serif;
+    max-width: 100vw;
+    width: 90%;
 }
 .subHeadine{
-    width: 28rem;
+    /* width: 28rem; */
     margin-top: 13px;
     font-weight: lighter;
 }
@@ -47,8 +62,12 @@
     .hero-img{
         border: 2px solid transparent;
         border-radius: 13px;
-        
     }
+
+    .hero-img img{
+        max-width: 100vw;
+    }
+
     .headline{
         font-size: 3.5rem;
     }
@@ -56,7 +75,7 @@
         margin-top: 13px;
         font-size: 25px;
     }
-    .info div {
+    .info {
         display: flex;
         flex-direction: column;
         justify-content: center;
