--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -5,9 +5,8 @@
 	scroll-behavior: smooth;
 }
 
-
 :root {
-	--mainColor: #29335c;
+	--mainColor: rgba(41, 51, 92, 0.8);
 	--mainColorLight: #5767aa;
 	--secondaryColor: #db2b39;
 	--textColor: #eee;
@@ -17,16 +16,18 @@ header {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	margin-top: 33px;
+	padding-top: 33px;
 	width: 100vw;
+	background-color: whitesmoke;
 }
 
 header img {
 	position: absolute;
 	top: 23px;
 	left: 23px;
-	height: 4rem;
-	width: 8rem;
+	height: 6rem;
+	width: 10rem;
+	border-radius: 5px;
 }
 
 nav a {
@@ -70,6 +71,10 @@ nav {
 	background-color: rgb(43, 73, 163);
 }
 
+.active{
+	border-bottom: 2px solid black;
+}
+
 @media only screen and (max-width: 1024px) {
 	header {
 		width: 100vw;
@@ -100,21 +105,24 @@ nav {
 		flex-direction: column;
 		align-items: center;
 		justify-content: center;
-		gap: 1.5rem;
 		background-color: var(--mainColor);
+		gap: 1.5rem;
 		transition: 0.5s;
 	}
-
+	
 	header .responsive_nav {
 		transform: translateY(200vh);
-		width: 100vw;
+		max-width: 100vw;
+		width: 100%;
+		backdrop-filter: blur(10px);
+		/* height: 100%; */
 	}
 
 	nav .nav-close-btn {
 		position: absolute;
 		top: 2rem;
 		right: 2rem;
-		background-color: #29335c;
+		background-color: var(--mainColor);
 		color: white;
 	}
 
