--- a/src/Components/about.css
+++ b/src/Components/about.css
@@ -1,10 +1,13 @@
 .about-section {
-    margin-top: 33px;
+    padding-top: 33px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100vw;
+    max-width: 100vw;
+    width: 100%;
+    background-color: whitesmoke
+    /* overflow: hidden; */
 }
 
 .about-section>h1 {
@@ -15,12 +18,15 @@
 }
 
 .mission-section {
-    margin-top: 12rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    width: 70vw;
+    width: 100vw;
+    height: 100%;
+    padding: 4rem 6rem;
+    margin-top: 6rem;
+    background: white;
 }
 
 .mission-section>h3 {
@@ -36,15 +42,19 @@
 .mission-section>h4 {
     font-size: 23px;
     font-weight: bold;
+    text-align: center;
 }
 
 .socials {
     display: flex;
     margin-top: 23px;
+    justify-content: center;
+    /* align-items: center; */
+    /* width: 15%; */
 }
 
-.socials>a>img {
-    margin: 0px 3px;
+.socials>a {
+    margin: 0px 1rem;
     width: 33px;
     height: 33px;
 }
@@ -54,8 +64,10 @@
     justify-content: space-between;
     align-items: center;
     gap: 1.5rem;
-    width: 70vw;
-    margin-top: 12rem;
+    padding: 3rem 5rem;
+    /* width: 70vw; */
+    padding-top: 12rem;
+    background-color: white;
 }
 
 .story-info {
@@ -71,7 +83,7 @@
 }
 
 .story-info>p {
-    width: 40vw;
+    /* width: 40vw; */
     margin-top: 33px;
     font-size: 18px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -104,27 +116,50 @@
     border-radius: 13px;
 }
 
+.gray-bg{
+    background-color: whitesmoke;
+    width: 100vw;
+}
+
+.white-bg{
+    width: 100vw;
+    background-color: white;
+}
+
 @media only screen and (max-width: 1024px) {
     .about-section{
         justify-content: flex-start;
-        margin: 0 1rem;
+        padding: 3rem 0;
         max-width: 100vw;
         width: 100%;
     }
+
+    .about-section>h1{
+        margin-bottom: 2rem;
+    }
+
     .mission-section {
-        margin-left: 8rem;
+        /* margin-left: 8rem; */
+        text-align: center;
         margin-top: 13px;
         flex-direction: column;
         justify-content: center;
         align-items: flex-start;
         max-width: 100vw;
         width: 100%;
-        margin: 1rem 2rem;
-        padding: 0 3rem;
+        margin: 0 2rem;
+        padding: 2rem 3rem;
+        word-wrap: break-word;
     }
 
     .mission-section>p {
         width: 100%;
+    }
+
+    .mission-section>h4{
+        max-width: 80vw;
+        padding: 0 1rem;
+        text-align: center;
     }
 
     .stroy-section {
@@ -132,8 +167,8 @@
         margin-left: 8rem;
         margin-top: 4rem;
         width: 100%;
-        margin: 1rem 2rem;
-        padding: 0 2rem;
+        margin: 0 2rem;
+        padding: 1rem 2rem;
     }
 
     .story-info {
@@ -160,5 +195,4 @@
         width: 120%;
         border-radius: 7px;
     }
-
 }
