--- a/src/Components/client.css
+++ b/src/Components/client.css
@@ -3,11 +3,14 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-bottom: 4rem;
+    background-color: whitesmoke;
 }
 .client-section>h1{
-    margin:3rem 0;
+    margin:3rem 1rem;
     font-size: 3rem;
     border-bottom: 2px solid black;
+    width: fit-content;
 }
 .client-container{
     width: 100%;
@@ -23,7 +26,8 @@
     width: fit-content;
     border: 2px solid transparent;
     border-radius: 13px;
-    background-color: rgb(243, 243, 243);
+    /* background-color: rgb(243, 243, 243); */
+    background-color: white;
 }
 .client-card>img{
     height: 4rem;
@@ -46,10 +50,22 @@
     margin: 13px 0;
     font-size: 23px;
 }
+
+.client-card .client-name{
+    text-align: center;
+}
+
 @media only screen and (max-width: 1024px){
     .client-section{
-        width: 160%;
+        max-width: 100vw;
+        width: 100%;
     }
+
+    .client-section-h1{
+        width: 70%;
+        text-align: center;
+    }
+
     .client-container{
         flex-direction: column;
         justify-content: center;
@@ -57,9 +73,14 @@
         margin: 0 2rem;
     }
     .client-card{
-        width: 50%;
+        width: 75%;
         margin: 1rem 2rem;
     }
+
+    .client-card p{
+        width: fit-content;
+    }
+
     .client-card>h3{
         margin: 33px 0;
         font-size: 33px;
