--- a/src/Components/contact.css
+++ b/src/Components/contact.css
@@ -1,20 +1,32 @@
 @import url('https://fonts.googleapis.com/css2?family=Bacasime+Antique&family=Ysabeau+SC:wght@300&display=swap');
 .contact-section{
+    max-width: 100vw;
+    width: 100%;
+    height: fit-content;
+    overflow: hidden;
+    margin-left: 0;
+    padding-left: 0;
+}
+
+.contact-container{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 80vh;
+    /* max-width: 100vw; */
 }
-.contact-section>h1{
+.contact-container h1{
 font-size: 2.5rem;
 font-family: 'Bacasime Antique', serif;
+text-align: center;
 }
-.contact-section>p{
+.contact-container p{
     margin-top: 33px ;
     font-family: 'Ysabeau SC', sans-serif;
+    text-align: center;
 }
-.contact-section>input{
+.contact-container input{
     padding: 8px;
     width: 30vw;
     margin: 13px 0;
@@ -22,7 +34,7 @@ font-family: 'Bacasime Antique', serif;
     border: 1px solid black;
     border-radius: 3px;
 }
-.contact-section>button{
+.contact-container button{
     padding: 7px;
     width: 8rem;
     border: 2px solid transparent;
@@ -31,25 +43,37 @@ font-family: 'Bacasime Antique', serif;
     color: white;
     cursor: pointer;
 }
-.contact-section>span{
+.contact-container #sucess{
     margin: 7px;
     font-size: 23px;
     color: green;
-    
 }
-.contact-section>button:hover{
+.contact-container #error{
+    /* margin: 7px; */
+    font-size: 23px;
+    color: red;
+}
+.contact-container button:hover{
     background-color: navy;
 }
 @media only screen and (max-width: 1024px){
     .contact-section{
         background-color: whitesmoke;
-        width: 100%;
-        height: auto;
-        margin: 5rem 0;
-        padding: 3rem 0;
+        max-width: 100vw;
+        /* width: 98%; */
+        overflow: hidden;
     }
-    .contact-section>input{
-        width: 80vw;
+    
+    .contact-container{
+        max-width: 100vw;
+        height: auto;
+        width: 98%;
+        padding: 3rem 1rem;
+        margin: 5rem auto;
+    }
+
+    .contact-container>input{
+        width: 60%;
         border-radius: 5px;
     }
 
