--- a/src/Components/footer.css
+++ b/src/Components/footer.css
@@ -7,6 +7,7 @@
     align-items: center;
     max-width: 100vw;
     width: 100%;
+    margin-bottom: 0px;
 }
 .footer-section>div{
     color: white;
