--- a/src/Components/Features.css
+++ b/src/Components/Features.css
@@ -62,6 +62,7 @@
     .features{
         max-width: 100vw;
         width: 100%;
+        overflow-x: hidden;
     }
     .features-content{
         display: flex;
@@ -69,7 +70,7 @@
         width: 100%;
     }
     .features-section>ul{
-        width: 100vw;
+        width: 80vw;
         list-style: disc;
         padding: 13px;
     }
@@ -81,7 +82,7 @@
         font-size: 30px;
     }
     .benefits-section>ul{
-        width: 100vw;
+        width: 80vw;
         list-style: disc;
         padding: 13px;
     }
@@ -94,6 +95,7 @@
     .features-img>img{
         height: 100%;
         margin: 0 auto;
+        margin-right: 1rem;
         width: 80vw;
        
     }   
