--- a/src/Components/Hero.css
+++ b/src/Components/Hero.css
@@ -56,8 +56,10 @@
 @media only screen and (max-width: 1024px) {
     .hero{
         flex-direction: column-reverse;
-        margin: 3rem 0 0 0;
+        /* margin: 3rem 0 0 0; */
+        max-width: 100vw;
         width: 100vw;
+        overflow: hidden;
     }
     .hero-img{
         border: 2px solid transparent;
