--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -17,16 +17,17 @@ header {
 	align-items: center;
 	justify-content: space-between;
 	padding-top: 33px;
+	padding-bottom: 2.75rem;
 	width: 100vw;
 	background-color: whitesmoke;
 }
 
 header img {
 	position: absolute;
-	top: 23px;
-	left: 23px;
-	height: 6rem;
-	width: 10rem;
+	/* top: 1rem; */
+	left: 1rem;
+	height: fit-content;
+	/* width: 10rem; */
 	border-radius: 5px;
 }
 
@@ -84,8 +85,10 @@ nav {
 
 	header img {
 		position: absolute;
-		top: 27px;
-		left: 27px;
+		/* top: 27px; */
+		left: 1rem;
+		height: 15rem;
+		width: fit-content;
 	}
 
 	header .nav-btn {
@@ -93,6 +96,7 @@ nav {
 		opacity: 1;
 		font-size: 3rem;
 		padding: 0 13px;
+		background-color: whitesmoke;
 	}
 
 	header nav {
