--- a/src/Components/contact.css
+++ b/src/Components/contact.css
@@ -1,4 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Bacasime+Antique&family=Ysabeau+SC:wght@300&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Bacasime+Antique&family=Ysabeau+SC:wght@300&display=swap'); */
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Montserrat+Alternates&display=swap');
+
 .contact-section{
     max-width: 100vw;
     width: 100%;
@@ -6,6 +9,7 @@
     overflow: hidden;
     margin-left: 0;
     padding-left: 0;
+    margin-top: 2rem;
 }
 
 .contact-container{
@@ -13,17 +17,18 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 80vh;
+    padding-bottom: 2rem;
+    /* height: 80vh; */
     /* max-width: 100vw; */
 }
 .contact-container h1{
 font-size: 2.5rem;
-font-family: 'Bacasime Antique', serif;
+font-family: 'Montserrat', sans-serif;
 text-align: center;
 }
 .contact-container p{
     margin-top: 33px ;
-    font-family: 'Ysabeau SC', sans-serif;
+    /* font-family: 'Ysabeau SC', sans-serif; */
     text-align: center;
 }
 .contact-container input{
