--- a/src/Components/footer.css
+++ b/src/Components/footer.css
@@ -7,6 +7,8 @@
     align-items: center;
     max-width: 100vw;
     width: 100%;
+    height: min-content;
+    margin-top: auto;
 }
 .footer-section>div{
     color: white;
@@ -15,7 +17,6 @@
     align-items: center;
     width: 30vw;
 }
-
 
 .socials{
     filter: invert(100%);
@@ -31,8 +32,8 @@
 }
 
 .logo>img{
-    height: 3.25rem;
-	width: 6.5rem;
+    height: 15rem;
+	width: fit-content;
 }
 .contact-email{
     color: white;
@@ -43,6 +44,7 @@
 }
 @media only screen and (max-width: 1024px){
     .footer-section{
+        margin-top: auto;
         max-width: 110vw;
         width: 100%;
         flex-direction: column;
@@ -52,7 +54,6 @@
         margin: 13px 0;
     }
    
-
     .footer-section>.contact-email{
         max-width: 80vw;
         width: 100%;
@@ -66,5 +67,9 @@
 
     .footer-section>.copyright{
         max-width: 80vw;
+    }
+
+    .logo>img{
+        display: none;
     }
 }
