--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -25,8 +25,8 @@ header {
 header img {
 	position: absolute;
 	/* top: 1rem; */
-	left: 1rem;
-	height: fit-content;
+	left: 3rem;
+	height: 14rem;
 	/* width: 10rem; */
 	border-radius: 5px;
 }
