--- a/src/Components/Features.css
+++ b/src/Components/Features.css
@@ -8,8 +8,9 @@
     align-items: center;
     margin-top: 5rem;
     gap: 2rem;
-    margin: 5rem 0;
-    padding: 0 5rem;
+    margin: 5rem auto;
+    /* padding: 0 5rem; */
+    width: 80%;
 }
 .features>h1{
     border-bottom: 2px solid black;
@@ -20,11 +21,13 @@
     /* width: 70%; */
     display: flex;
     justify-content: space-around;
+    gap: 1.5rem;
     /* align-items: center; */
     /* margin-top: 1rem; */
 }
 .features-section{
     margin-top: 2rem;
+    width: 100%;
 }
 .features-section>ul{
     /* width: 20vw; */
@@ -36,7 +39,8 @@
     margin: 7px;
 }
 .benefits-section{
-    margin-top: 2rem ;
+    margin-top: 2rem;
+    width: 100%;
 }
 
 .benefits-section>ul{
@@ -61,7 +65,7 @@
 @media only screen and (max-width: 1024px){
     .features{
         max-width: 100vw;
-        width: 100%;
+        /* width: 100%; */
         overflow-x: hidden;
     }
     .features-content{
@@ -95,8 +99,8 @@
     .features-img>img{
         height: 100%;
         margin: 0 auto;
-        margin-right: 1rem;
-        width: 80vw;
-       
+        /* margin-right: 1rem; */
+        /* max-width: 100vw; */
+        width: 100%;
     }   
 }
