--- a/src/Components/Hero.css
+++ b/src/Components/Hero.css
@@ -1,15 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap'); */
+
+.hero-container{
+    max-width: 100vw;
+    width: 100%;
+    background-color: whitesmoke;
+    min-height: 100vh;
+}
 
 .hero{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 80%;
     margin: auto;
-    padding-top: 5rem;
-    padding-bottom: 2rem;
-    max-width: 100vw;
-    background-color: whitesmoke;
+    padding-top: 0.75rem;
+    padding-bottom: 1rem;
 }
 .info{
     /* width: 33rem; */
@@ -28,8 +33,8 @@
 }
 
 .headline{
-    font-size: 4rem;
-    font-family: 'Playfair Display', serif;
+    font-size: 3rem;
+    /* font-family: 'Playfair Display', serif; */
     max-width: 100vw;
     width: 90%;
 }
@@ -54,13 +59,18 @@
     background-color: rgb(47, 79, 176);
 }
 @media only screen and (max-width: 1024px) {
+    .hero-container{
+        max-width: 100vw;
+        width: 100%;
+    }
+
     .hero{
         flex-direction: column-reverse;
         /* margin: 3rem 0 0 0; */
-        max-width: 100vw;
-        width: 100vw;
         overflow: hidden;
+        width: 100%;
     }
+
     .hero-img{
         border: 2px solid transparent;
         border-radius: 13px;
