--- a/src/Components/about.css
+++ b/src/Components/about.css
@@ -22,7 +22,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    width: 100vw;
+    max-width: 100vw;
     height: 100%;
     padding: 4rem 6rem;
     margin-top: 6rem;
@@ -54,20 +54,27 @@
 }
 
 .socials>a {
-    margin: 0px 1rem;
-    width: 33px;
-    height: 33px;
+    margin: 1rem;
+    /* width: 33px; */
+    /* height: 33px; */
+}
+
+.story-container{
+    width: 100vw;
+    padding-top: 8rem;
+    background-color: white;
+    padding-bottom: 8rem;
 }
 
 .stroy-section {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    /* padding: 3rem 5rem; */
     align-items: center;
-    gap: 1.5rem;
-    padding: 3rem 5rem;
-    /* width: 70vw; */
-    padding-top: 12rem;
-    background-color: white;
+    align-content: center;
+    gap: 1.55rem;
+    width: 80%;
+    margin: auto;
 }
 
 .story-info {
@@ -76,6 +83,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
+    width: 50%;
 }
 
 .story-info>h1 {
@@ -88,6 +96,7 @@
     font-size: 18px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: 100;
+    line-height: 1.75rem;
 }
 
 .story-info>button {
@@ -110,10 +119,18 @@
     font-size: 18px;
 }
 
+.story-img{
+    width: 50%;
+}
+
 .story-img>img {
-    height: 24vw;
-    width: 32vw;
+    /* height: 24vw; */
+    /* width: 32vw; */
+    width: 100%;
+    height: 100%;
     border-radius: 13px;
+    object-fit: cover;
+    object-position: center;
 }
 
 .gray-bg{
@@ -164,9 +181,9 @@
 
     .stroy-section {
         flex-direction: column;
-        margin-left: 8rem;
+        /* margin-left: 8rem; */
         margin-top: 4rem;
-        width: 100%;
+        width: 90%;
         margin: 0 2rem;
         padding: 1rem 2rem;
     }
@@ -189,10 +206,11 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        width: 100%;
     }
     .story-img>img {
-        height: 30vh;
-        width: 120%;
+        height: 100%;
+        width: 100%;
         border-radius: 7px;
     }
 }
