--- a/src/Components/contact.css
+++ b/src/Components/contact.css
@@ -18,7 +18,7 @@
     justify-content: center;
     align-items: center;
     padding-bottom: 2rem;
-    /* height: 80vh; */
+    height: 60vh;
     /* max-width: 100vw; */
 }
 .contact-container h1{
